--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,44 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-    section{
-        @apply py-[75px]
-    }
+
+/* Base Layer */
+@layer base {
+  .section {
+    @apply py-[75px];
+  }
 }
 
-@layer components{
-    .container {
-        @apply max-w-full w-[1440px] px-5 mx-auto
-    }
+/* Components Layer */
+@layer components {
+  .container {
+    @apply max-w-full w-[1440px] px-5 mx-auto;
+  }
 
-    .btn{
-        @apply bg-primaryColor py-[15px] px-[35px] rounded-[50px] text-white font-[600] mt-[30px]
-    }
+  .btn {
+    @apply bg-primaryColor py-[15px] px-[35px] rounded-[50px] text-white font-[600] ;
+  }
 
-    .heading {
-        @apply text-[44px] leading-[54px] font-[700] text-headingcolor;
-    }
-        
-    .text__para {
-        @apply text-[18px] leading-[30px] font-[400] text-textcolor mt-[18px];
-        }
-    }
+  .heading {
+    @apply text-[44px] leading-[54px] font-[700] text-headingColor;
+  }
 
+  .text__para {
+    @apply text-[18px] leading-[30px] font-[400] text-textColor mt-[18px];
+  }
+
+  .header {
+    @apply w-full h-[100px] leading-[100px];
+  }
+}
+
+/* Responsive Media Queries */
 @media only screen and (max-width: 1024px) {
-    .container {
-        apply w-full;
-    }   
-    section {
-        @apply py-[35px];
-    }
+  .container {
+    @apply w-full;
+  }
+
+  .section {
+    @apply py-[35px];
+  }
 }
 
-@media only screen and (ax-width: 760px) {
-    .heading {
-        @apply text-[26px] Leading-[36px];   
-    }
-    .text__para {
-        @apply text-[16px] Leading-7 mt-3;
-    }
+@media only screen and (max-width: 760px) {
+  .heading {
+    @apply text-[26px] leading-[36px];
+  }
+
+  .text__para {
+    @apply text-[16px] leading-7 mt-3;
+  }
 }
